# kleis-scope

./: Cargo.toml  README.md
crates/scope-core/: Cargo.toml
crates/scope-core/src/: channel.rs  cursor.rs  export.rs  lib.rs  math.rs  measure.rs  ring_buffer.rs  timebase.rs  trigger.rs
crates/scope-core/src/input/: file.rs  mod.rs  stdin.rs  tcp.rs  websocket.rs
crates/scope-native/: Cargo.toml
crates/scope-native/src/: main.rs
crates/scope-web/: Cargo.toml  index.html
crates/scope-web/src/: lib.rs
scripts/: generate_test_signal.py  lorenz_attractor.py
